--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "worldweather",
+  "name": "worldweatherapp",
   "version": "0.1.0",
   "private": true,
   "scripts": {
@@ -8,16 +8,29 @@
     "lint": "vue-cli-service lint"
   },
   "dependencies": {
+    "axios": "^0.22.0",
     "core-js": "^3.6.5",
-    "vue": "^2.6.11"
+    "js-cookie": "^3.0.1",
+    "moment": "^2.29.1",
+    "vue": "^2.6.11",
+    "vue-router": "^3.2.0",
+    "vuelidate": "^0.7.6",
+    "vuex": "^3.4.0",
+    "vuex-persistedstate": "^4.1.0"
   },
   "devDependencies": {
     "@vue/cli-plugin-babel": "~4.5.0",
     "@vue/cli-plugin-eslint": "~4.5.0",
+    "@vue/cli-plugin-router": "^4.5.13",
+    "@vue/cli-plugin-vuex": "^4.5.13",
     "@vue/cli-service": "~4.5.0",
     "babel-eslint": "^10.1.0",
     "eslint": "^6.7.2",
     "eslint-plugin-vue": "^6.2.2",
+    "node-sass": "^6.0.1",
+    "sass": "^1.42.1",
+    "sass-loader": "^10.2.0",
+    "style-resources-loader": "^1.4.1",
     "vue-template-compiler": "^2.6.11"
   },
   "eslintConfig": {
